bin/testsuite/tests/compiler/src/errors/compiler5771.swg
#global skip
#global testerror "Err0060"

//#[Swag.PrintGenBc]
func toto0(encoder: s32)
{
}
